# Meme-Maker

./: .env.monitoring.dev  .env.monitoring.staging  .env.security-test  .env.staging  .env.staging.template  .gitattributes  .gitignore  .secrets.baseline  BLACK_FRAMES_FIX_COMPLETE.md  BUSINESS_LOGIC_SECURITY_ANALYSIS.md  Best-Practices.md  Browser_Console_Errors_Fix_Summary.md  CADVISOR_FIX_COMPLETE.md  COMPREHENSIVE_TEST_RESULTS.md  Caddyfile  Caddyfile.dev  Caddyfile.localhost  Caddyfile.minimal  Caddyfile.temp  Caddyfile.test  DEBUG_LOGGING_IMPROVEMENTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_HEALTH_CHECK_ANALYSIS.md  DEPLOYMENT_QUICK_START.md  DISK_SPACE_MANAGEMENT.md  DOMAIN_HTTPS_FIX_SUMMARY.md  Dockerfile.backend  Dockerfile.worker  ErrorTodo.md  Frontend files.rar  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_FIXES_COMPREHENSIVE.md  HTTPS_SETUP_INSTRUCTIONS.md  IG_POA.md  IMMEDIATE_FIX_COMMANDS.md  IMPLEMENTATION_ANALYSIS.md  INFRASTRUCTURE_SETUP.md  INTEGRATION_COMPLETE.md  INVESTIGATION_STATUS_LOG.md  LICENSE  (+198 more)
.bat files/: health-check.bat  start 4 servers properly.bat  start-app.bat  start-dev-debug.bat  verify-fix.bat
Security_Updates/: COMPREHENSIVE_SECURITY_SUMMARY.md  DEPLOY_SECURITY_TODO.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_VERIFICATION_CHECKLIST.md  PHASE_4_PENETRATION_TESTING_REPORT.md  SECURITY_AUDIT_STATUS_UPDATE.md  SECURITY_DOCUMENTATION_INDEX.md
Status Updates/: Status Update 1.md  Status Update 2.md  Status Update 3.md  Status Update 4.md  Status Update 5.md
backend/: 2.10.1  README.md  bandit_report.json  check_new_video_metadata.py  check_video_metadata.py  pyproject.toml  pytest.ini  requirements.bak.20250602145027  requirements.txt  safety_report.json  setup.cfg  test_numeric_seconds.py  windows_worker.py
backend/app/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  main.py  metrics.py  metrics_definitions.py  models.py  ratelimit.py  storage.py  storage_factory.py
backend/app/api/: clips.py  jobs.py  metadata.py  phase3_endpoints.py  video_proxy.py
backend/app/cache/: __init__.py  metadata_cache.py
backend/app/config/: __init__.py  configuration.py  settings.py
backend/app/factories/: __init__.py  storage_factory.py
backend/app/logging/: __init__.py  config.py
backend/app/metrics/: __init__.py  rq_updater.py
backend/app/middleware/: __init__.py  admin_auth.py  queue_protection.py  rate_limiter.py  security_headers.py
backend/app/queue/: __init__.py  manager.py
backend/app/repositories/: __init__.py  job_repository.py
backend/app/services/: __init__.py  job_service.py
backend/app/tasks/: __init__.py  cleanup.py
backend/app/utils/: __init__.py  job_utils.py  minio_storage.py  mock_storage.py  platform_detection.py  storage_interface.py  ytdlp_options.py
backend/tests/: README_MOCK_STORAGE_VALIDATION.md  conftest.py  test_api_contracts.py  test_business_logic.py  test_configuration.py  test_critical_path.py  test_download_url_fix.py  test_e2e_smoke.py  test_example_with_mock_storage.py  test_health.py  test_jobs.py  test_jobs_mock_storage_simplified.py  test_jobs_with_mock_storage.py  test_local_storage.py  test_metrics.py  test_mock_storage_integration.py  test_mock_storage_standalone.py  test_phase3_integration.py  test_rate_limit.py  test_security_middleware.py  test_simple.py  test_storage_interface.py  test_terms_acceptance.py  test_worker_integration.py
backend/tests/e2e/: __init__.py  test_health.py
backend/tests/metrics/: __init__.py  test_imports.py
cookies/: README.md  instagram_cookies.txt
deploy/: memeit.service
deployment_backup_20250720_201644/: docker-compose.yaml
docs/: LIGHTSAIL_DEPLOYMENT.md  TESTING.md  accessibility-audit-summary.md  accessibility.md  aws-setup-prod.md  color-contrast-quick-reference.md  final-review.md  frontend-deployment.md  getting-started.md  grafana-rate-limit-panel.json  legal.md  line_counts_sample.md  monitoring.md  production-deployment-steps.md  production-deployment.md  quickstart-summary.md  rate-limiting.md  release-checklist.md  security.md  smoke-test.md  staging-deployment.md  ux.md
frontend/: .babelrc.js  .percy.yml  Dockerfile.dev  README.md  SETUP.md  bundle-report.json  cypress.config.ts  jest.config.js  jest.setup.js  lighthouserc.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend-backup/: jest.config.js  package-lock.json
frontend-new/: .env.example  .env.staging  .eslintrc.json  API_INTEGRATION.md  COMPONENT_GUIDE.md  Dockerfile  Dockerfile.backup  Dockerfile.dev  Dockerfile.staging  ENVIRONMENT_SETUP.md  PRODUCTION_READY.md  README.md  cypress.config.ts  eslint.config.js  index.html  nginx-security-enhanced.conf  nginx-security-local.conf  nginx-staging.conf  nginx.conf  nginx.staging.conf  package-lock.json  package.json  stryker.conf.json  vite.config.ts
infra/: README.md
redis/: dump.rdb  redis-server.exe.REMOVED.git-id
(+368 files in other folders)
