[tool.poetry]
name = "meme-maker-backend"
version = "0.1.0"
description = "FastAPI backend for Meme Maker video clipping service"
authors = ["Meme Maker Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "<2.0"
redis = "^5.0.1"
rq = "^1.15.1"
boto3 = "^1.34.0"
aiofiles = "^23.2.1"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
yt-dlp = "^2024.12.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
fakeredis = "^2.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
